# markov-chain

./: .gitignore  GamblersRuin.py  MarkovClass.py  Monopoly.py  README.md  pyproject.toml  test.py  time_monopoly.py
docs/: MarkovChains.tex
julia/: test.jl
julia/src/: MarkovChain.jl  MarkovChainModule.jl  ProbMatrix.jl
python/: GamblersRuin.py  Monopoly.py  PageRankExample.py
python/docs/: MarkovChains.tex
src/markov_chain/: chain.py  plot_chain.py
src/markov_chain/apps/streamlit/: main.py
src/markov_chain/apps/streamlit/pages/: gamblers_ruin.py  monopoly.py
src/markov_chain/examples/: gamblers_ruin.py
src/markov_chain/examples/monopoly/: chain.py  monte_carlo.py  utils.py
tests/unit/: test_chain.py
tests/unit/examples/: test_gamblers_ruin.py
tests/unit/examples/monopoly/: test_chain.py
